Fix overflowing inline semantics table
Overflowed and caused incorrect page width
on mobile.

--- a/cmd.css
+++ b/cmd.css
@@ -18,9 +18,19 @@ body {
   padding: 0 0.25em;
 }
 
+.centred-block {
+  display: flex;
+  justify-content: center;
+  margin: 1em 0;
+}
+
 .centred-flex{
   display: flex;
   justify-content: center;
+}
+
+.overflowing {
+  overflow-x: auto;
 }
 
 .page-properties {
